--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin: 0 auto;
   margin-top: 60px;
-  padding-bottom: 20px;
+  margin-bottom: 30px;
   width: 1000px;
   color: #1f3349;
   border-radius: 10px;
