--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -14,3 +14,24 @@
   align-items: center;
   max-width: 500px;
 }
+
+.filter_header {
+  display: flex;
+  font-size: 50px;
+  margin-bottom: 10px;
+  justify-content: center;
+}
+
+.filter_container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  margin-top: 60px;
+  padding-bottom: 30px;
+  width: 500px;
+  color: #1f3349;
+  border-radius: 10px;
+  background-color: rgb(240, 215, 240);
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+}
